--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -21,14 +21,19 @@ footer {
   background: #4a4e57;
   text-align: center;
   color: #ed7e8a;
-  padding: 15px 10px;
+  padding: 20px 10px;
 }
 
-ul,
+ul {
+  margin: 0 auto;
+  max-width: 800px;
+  padding: 35px 0;
+}
+
 footer {
   margin: 0 auto;
-  max-width: 900px;
-  padding: 15px 0;
+  max-width: 800px;
+  padding: 20px 0;
 }
 
 h1 {
