--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -58,7 +58,7 @@ li {
   color: white;
 }
 
-ul input {
+input {
   width: 20px;
   height: 20px;
 }
@@ -89,7 +89,7 @@ li:hover {
   border-bottom: 4px solid white;
 }
 
-ul input:checked + label {
+input:checked + label {
   text-decoration: line-through;
   color: #a3a0b5;
 }
